--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
             </div>
 
             <div class="output-container">
-
                 <div class="input-group mb-3">
                     <input type="text" class="form-control border-0" id="output-one" class="output">
                     <button class="btn copy-one border-0" type="button" id="button-addon2" data-bs-toggle="tooltip" data-bs-placement="top"
@@ -46,19 +45,10 @@
 
                 <div class="input-group mb-3">
                     <input type="text" class="form-control border-0" id="output-two" class="output">
-                    <button class="btn copy-two border-0" type="button" id="button-addon2" data-bs-toggle="tooltip" data-bs-placement="top"
+                    <button class="btn copy-two border-0" type="button" id="button-addon2 xx" data-bs-toggle="tooltip" data-bs-placement="top"
                     data-bs-custom-class="custom-tooltip"
                     data-bs-title="Copy to clipboard" onclick="copyTextTwo()" onmouseout="outFuncTwo()"><i class="fa-regular fa-copy"></i></button>
                 </div>
-
-                <!-- <input id="output-one" class="output">
-                <button class="copy-one" onclick="copyTextOne()" onmouseout="outFuncOne()">
-                    <span class="tooltiptext" id="myTooltipOne">
-                        Copy to clipboard
-                    </span>
-                    <i class="fa-regular fa-copy"></i>
-                </button> -->
-
             </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
